--- a/acwing/算法/蓝桥杯/二分和前缀和/二分.md
+++ b/acwing/算法/蓝桥杯/二分和前缀和/二分.md
@@ -3,6 +3,8 @@
 > 真正学会一样东西，是能够有条理地讲述教授给他人,并总结和简化所学内容
 >
 > 十次走马观花的回顾也抵不过一次一丝不苟的总结过程
+>
+> 能自己看书悟化的内容是真正容进你血液里，而看视频只能停留在知识表象，一直在被动接受，缺乏主动思考的过程。视频虽然看的爽，但是看完不做题巩固，又会还给老师的。
 
 二分查找，也称折半查找，是一种查找方法。
 
