--- a/李沐/d2l-zh/3. 线性回归/3.4 softmax回归.ipynb
+++ b/李沐/d2l-zh/3. 线性回归/3.4 softmax回归.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "## 规范化\n",
     "当前模型输出的$\\pmb{o}=[o_1,o_2,o_3]$,通过公式得到的$o_1,o_2,o_3 \\in [-\\infty,+\\infty]$,我们想将其映射到$[0,1]$内，且和为1，因为\n",
-    "1. 这样可以将$\\pmb{o}$的每一维视为概率.因为概率$\\in[0,1]$，且和为1\n",
+    "1. 这样可以将$\\pmb{o}$的每一维视为概率.因为概率$\\in[0,1]$，且和为1；即$o_1$表示$P(o_1,\\pmb x)$,$o_2$表示$P(o_2|\\pmb x)$\n",
     "2. 输出$\\pmb{o}$对应欧式空间上的点，与正确类别的独热编码表示对应的欧式空间上的点可以轻松地比较距离，从而容易定义损失函数  \n",
     "在本章中，将输出$\\pmb{o}=[o_1,o_2,o_3]$的每一个分量从$[-\\infty,+\\infty]$映射到$[0,1]$中的映射函数叫softmax函数，这个映射的过程叫做规范化"
    ]
@@ -172,9 +172,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b00a11b2",
+   "metadata": {},
+   "source": [
+    "## 损失函数\n",
+    "现在我们要计算预测值$\\pmb o$与真实值$\\pmb y$之间的距离;$\\pmb o$的每一维是取该类别的条件概率，$\\pmb y$的每一维也是去取该类别的条件概率，但是$\\pmb y$只有其正确类别是1，其余维度全为0  \n",
+    "在学习损失函数之前先学习信息论的一些知识。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a15dc470",
+   "metadata": {},
+   "source": [
+    "## 信息论基础\n",
+    "举例说明两个概念：熵和信息量  \n",
+    "某彩票分未中奖，二等奖，一等奖三种，买一张这种彩票未中奖的概率为70%,二等奖的概率为20%，一等奖的概率为10%。假设你是知道这个概率的，用随机变量及其分布来表示，如下表格:\n",
+    "\n",
+    "|$X$|0|1|2|\n",
+    "|---|---|---|---|\n",
+    "|p(i)|0.7|0.2|0.1|  \n",
+    "\n",
+    "熵的公式$$H[P] = \\sum_j - P(j) \\log P(j).$$  \n",
+    "通过熵的公式，我们可以计算出*抽彩票*这件事的熵，**熵描述的是这件事情的不确定性**；比如说，如果未中奖的概率为1，其余两项为0，那么抽彩票这件事的结果是非常确定的，如果未中奖，中二等奖，中一等奖的概率平分1，即都是$\\frac{1}{3}$,那么抽彩票这件事的结果是最不确定的，因为取哪一个都是等可能的；如果买彩票中奖的概率如表格所示，那么抽彩票这件事的不确定性是比全$\\frac{1}{3}$的情况的不确定性要小的  \n",
+    "信息量$\\log \\frac{1}{P(j)} = -\\log P(j)$  \n",
+    "你的朋友买了一张彩票，你觉得这张彩票中了一等奖能让你吃惊，还是这张彩票没中奖让你吃惊？肯定是中了一等奖比没中奖更让你吃惊啊，我们就说中了一等奖的信息量大于没中奖的信息量。  \n",
+    "如果未中奖，中二等奖，中一等奖的概率平分1，即都是$\\frac{1}{3}$,然后你的朋友买了一张彩票，你觉得这张彩票中了一等奖能让你吃惊，还是这张彩票没中奖让你吃惊？你会觉得这三种结果发生的概率相同，结果是哪一个都没啥稀奇的，那么就说这三种结果的信息量相同。  \n",
+    "信息量描述*事件结果*的吃惊程度，越低概率的结果发生了，带给你的吃惊程度就越大，该结果所蕴含的信息量就越多。  \n",
+    "熵和信息量的关系  \n",
+    "如果一件事情的结果有很多，每一个的概率都是很小，那么这件事情的不确定性就非常大。每一个结果发生的概率很小，所蕴含的信息量很大，那么这个事件很多个结果的信息量都很大。说明了这件事情的熵大，这件事情的信息量就越大。  \n",
+    "交叉熵从$P$到$Q$，记为$H(P, Q)$。对于某一件事情来说，我们把$P$当作这件事情的主观概率分布律，即我们主观上认为这件事情的分布律；我们把$Q$当作根据一些数据得到的这件事情的概率分布律；那么交叉熵描述的是，**$P$的熵和$Q$的熵的差异**，当$P=Q$时，交叉熵达到最低。在这种情况下，从$P$到$Q$的交叉熵是$H(P, P)= H(P)$。  \n",
+    "比如上面的那个例子，如果我们主观概率分布是表格所示，根据数据得到的概率分布是 $P(0)=P(1)=P(2)=\\frac{1}{3}$，计算这两个概率分布的熵的差异，定义$\\mathbf{y}=\\lbrace 0.7,0.2,0.1\\rbrace,\\hat{\\mathbf{y}}=\\lbrace 0.33,0.33,0.33\\rbrace$,根据下方交叉熵的公式计算  \n",
+    "$$ l(\\mathbf{y}, \\hat{\\mathbf{y}}) = - \\sum_{j=1}^q y_j \\log \\hat{y}_j. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6e1d48",
+   "metadata": {},
+   "source": [
+    "那么根据上面所学信息论相关内容，我们可以用交叉熵来计算两个概率分布间的特征距离。$$ l(\\mathbf{o}, \\hat{\\mathbf{y}}) = - \\sum_{j=1}^q o_j \\log \\hat{y}_j. $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26961c41",
+   "id": "1e84f8de",
    "metadata": {},
    "outputs": [],
    "source": []
