--- a/考研数学/概率论/概率论.md
+++ b/考研数学/概率论/概率论.md
@@ -31,13 +31,13 @@
 1. 提到随机事件时，一定要想到是关于哪个随机试验的随机事件
 2. 随机事件满足了什么条件，或者说，随机事件包含哪些样本点。
 
-**在每次试验中，随机事件中如果有样本点发生了，就说这个随机事件发生了。**
+**在每次试验中，一个随机事件中如果有样本点发生了，就说这个随机事件发生了。**
 
 这个也很好理解，比如：
 
 试验$\pmb{E}$:在一批灯泡中随机抽取一只，测试它的寿命$t$。样本空间$\pmb{S} = \lbrace t\geqslant 0\rbrace$；如果规定$t\geqslant 500$为合格的灯泡；定义满足$t \geqslant 500$ 这个条件的事件$\pmb{A}$ 。在一次试验中，测得灯泡的寿命$t = 650$ ，我们就说事件$\pmb{A}$ 发生了。 
 
-由一个样本点组成的子集，称为基本事件
+由一个样本点组成的子集，称为**基本事件**
 
 样本空间$\pmb{S}$ 本身是自己的子集，样本空间$\pmb{S}$ 称必然事件
 
@@ -110,6 +110,134 @@
 任何问题都可以想成样本点之间的抵消与合并
 
 
+
+### 等可能概型
+
+1. 试验的样本空间包含有限个元素
+2. 试验中的每个基本事件发生的可能性相同
+
+公式1：$$试验E的样本空间S={e_1,e_2,...,e_n},P(e_1)=P(e_2)=P(...)=P(e_n)$$
+
+公式2: $$P(e_1)+P(e_2)+...+P(e_n)=1$$
+
+公式3:$$若事件A包含k个样本点,则P(A)=\frac{k}{n}$$
+
+
+
+### 条件概率
+
+$P(B|A)$表示在事件$A$已经发生的情况下，事件$B$发生的概率.
+
+从样本点的角度考虑，事件$A$已经发生，说明了，**有一个属于事件$A$的样本点已经发生了**，哪一个样本点都有可能发生，我们现在先假设，**事件A所有的样本点发生的可能性都相同**，虽然不确定是哪一个，但是**考虑的范围一定在事件$A$这个集合中**，要求的是事件$B$ 发生的可能性，事件$B$要想发生，必须是属于事件$B$的样本点发生了；现在已知的是 事件$A$中的样本点已经发生了，如果事件$A$和事件$B$ 要是没有交集，即没有公共的样本点，这两个事件就不可能同时发生，$P(B|A)$就为0；如果有公共样本点，那$P(B|A)=\frac{n_{AB}}{n_A}$,即公共样本点与A的样本点的比值。
+
+注意：因为我们假设事件$A$所有的样本点发生的可能性都相同，才能说$P(B|A)=\frac{n_{AB}}{n_A}$ ；
+
+如果没有这个假设，我们只能说$P(B|A)=\frac {P(AB)}{P(A)}$ 
+
+**别忘了，每一个样本点都是有概率的。**
+
+
+
+其实条件概率只是将原来的样本空间缩小成了事件$A$(注意事件$A$是一个样本点集合);
+
+条件概率也符合概率的定义：
+
+1. 非负性：对于**每一个**事件$B$,$P(B|A)\geq 0$----->想成事件$A$和事件$B$的交集样本点，这部分样本点的概率和比上事件$A$的样本点的概率和；
+2. 规范性:即$P(A|A)=1$
+3. 可列可加性:对于互不相容的事件$B_1,B_2$,有$P(B_1|A)+P(B_2|A)=P(B_1 \cup B_2|A)$
+
+并不难理解，唯一变了的地方就是，样本空间成了事件$A$
+
+**注意：提及$P(B|A)$的时候，可以想成在事件$A$的范围内，找到事件$A$和事件$B$的交集，这部分交集比上整个$A$**
+
+**提及$P(A),P(B)$时，还是以整个样本空间为基础进行考虑** 
+
+
+
+划分:
+
+试验$E$的样本空间$S$，一组事件$B_1,B_2,...$ 将样本空间进行划分，即各不相交且并起来是整个样本空间
+
+
+
+与条件概率有关的公式：
+
+1.乘法原理：$P(AB)=P(B|A)*P(A)$
+
+- $P(ABC)=P(C|AB)*P(B|A)*P(A)$
+
+可以理解成$P(ABC)=P(C|AB)*P(AB)$
+
+2. 全概率公式:试验$E$的样本空间$S$的一组划分$B_1,B_2,...$，和试验$E$的一个事件$A$，满足如下公式：
+
+$P(A)=P(A|B_1)+P(A|B_2)+p(A|...)$
+
+脑子里想图像，很容易理解
+
+3. 贝叶斯公式(Bayes)：由全概率公式和条件概率的定义推导出的式子
+
+![1680321970923](概率论.assets/1680321970923.png)
+
+看5.9，分子是乘法原理，分母是全概率公式
+
+
+
+放回抽样和不放回抽样；
+
+先验概率：指根据以往经验和分析(根据计算的概率分布)。在实验或采样前就可以得到的概率。
+
+后验概率：已知某事件已经发生，求在事件已经发生的情况下，某些事件的概率，就是条件概率
+
+
+
+### 独立性
+
+设事件$A,B$是试验$E$的两个事件，若$P(A)\geq 0$,可以定义$P(B|A)$ ,一般，A的发生对B的发生是有影响的，即$P(B) \neq P(B|A)$ ；如果A的发生对B的发生没有影响，即$P(B|A)=P(A)$，说明事件$A,B$相互独立
+
+需要强调一下：
+
+1. 事件$A,B$必须是同一试验的两个事件
+
+2. 证明两个事件是否是相互独立的，只需要看看是不是同一试验$E$的两个事件，等价来说，看看两个事件的样本空间是否一致；再分别求出P(B|A)和P(A)；看看两个是否相等，如果相等，就说明是相互独立的。
+3. 我之前学习时的误区：认为事件$A,B$相互独立是指两个事件不相交，这种思想从高中贯穿至我的大二，直到大三考研时才明白，这种想法是完全错误的。再强调一遍：要证明两个事件是否是相互独立的，只要根据定义即可。
+
+这里，为了证实我错误的思想，我把书中的例子抄上来以供理解。
+
+例1：设试验$E$为“抛甲、乙两枚硬币，观察正反面出现的情况”，设事件$A$为“甲币出现$H$,事件$B$为“乙币出现$H$”,则试验$E$的样本空间$S=\lbrace HH,HT,TH,TT\rbrace$
+
+现在证明事件$A$和事件$B$是否有独立性，已知事件$A,B$都是属于试验$E$的事件，ok，这个没问题；
+
+$A=\lbrace HH,HT \rbrace$ 
+
+$B=\lbrace HH,TH \rbrace$
+
+略微思考一下，可知样本空间$S$的每一个样本点发生的可能性相同，即这是个古典概型
+
+可求得$P(A)=\frac{1}{2}$,$P(B)=\frac{1}{2}$
+
+要求$P(B|A)=\frac{P(AB)}{P(A)}$,
+
+先求$P(AB)$指事件$A,B$同时发生的概率，事件$A,B$的交集只有一个$HH$,样本空间为$S$,又因为是等概率事件，所以$P(AB)=\frac{P(HH)}{P(S)}=P(HH)=\frac{1}{4}$  
+
+所以$P(B|A)=\frac{P(AB)}{P(A)}=\frac{\frac{1}{4}}{\frac{1}{2}}=\frac{1}{2}$
+
+可知，**$P(B|A)=P(A)$ ，即不管事件$A$发不发生，都不影响事件$B$发生的概率，这才是独立性的内在含义**，另一点，我们看，事件$A,B$是相互独立的，但是这两个事件都有一个共同的样本$HH$，这就说明，事件$A,B$相互独立并不是指两个事件不相交。
+
+
+
+与相互独立有关的定理：
+
+1. 事件$A,B$如果相互独立，说明P(B|A)=P(B),反之亦然，即P(A|B)=P(A)
+2. 若事件$A,B$相互独立，则对立事件也相互独立，即A和B，A和$\bar B$ ,$B$和$\bar A$ ,$\bar A$和$\bar B$都相互独立
+3. ![1680328619833](概率论.assets/1680328619833.png)
+
+
+
+第一章已经学完了，感觉我收获满满，即都能理解，而且解决了我多年的困惑，因为从高中就接触概率，但一直是不明不白，我悟出了一个道理，也是我从别的文章看到的，分享一下。
+
+> 能自己看书悟化的内容是真正容进你血液里，而看视频只能停留在知识表象，一直在被动接受，缺乏主动思考的过程。视频虽然看的爽，但是看完不做题巩固，又会还给老师的。
+
+虽然自己理解了，但并不代表真的理解了，需要大量做题，所以要练题的，这一步是不能省的。
 
 
 
