开坑装机知识，以后自己装机。补充如何学习算法的方法

--- a/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
+++ b/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
@@ -1,17 +1,22 @@
 什么是数据结构？
 
-[1.什么是数据结构 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/147831571)
+「数据结构 Data Structure」是计算机中组织和存储数据的方式。为了提高数据存储和操作性能，数据结构的设计目标包括：
 
-[什么是数据结构 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/108368771)
+- 空间占用尽量减少，节省计算机内存。
+- 数据操作尽可能快速，涵盖数据访问、添加、删除、更新等。
+- 提供简洁的数据表示和逻辑信息，以利于算法高效运行。
 
-了解数据结构应该从两方面考虑，一方面是抽象的逻辑结构，另一方面是物理的存储结构；
+数据结构设计是一个充满权衡的过程，这意味着要在某方面取得优势，往往需要在另一方面作出妥协。例如，链表相较于数组，在数据添加和删除操作上更加便捷，但牺牲了数据访问速度；图相较于链表，提供了更丰富的逻辑信息，但需要占用更大的内存空间。
+
+
+
+了解一种数据结构应该从两方面考虑，一方面是抽象的逻辑结构，另一方面是物理的存储结构；
 
 
 
 数据的逻辑结构不考虑数据在计算机的位置，只描述数据元素之间的关系；
 
-1. 集合结构：数据元素之间除了同属于一个集合外，它们之间没有其他的关系。
-2. 线性结构：数据元素之间除了同属于一个集合外，数据元素之间是一对一的关系。
+2. 线性结构：数据元素之间是一对一的关系。
 
 - 一对一：
 
@@ -19,7 +24,7 @@
 
 ![1680849746349](什么是数据结构.assets/1680849746349.png)
 
-3. 树形结构：数据元素之间除了同属于一个集合外，数据元素之间存在一种一对多的层次关系。
+3. 树形结构：数据元素之间存在一种一对多的层次关系。
 
 - 一对多：
 
@@ -27,7 +32,7 @@
 
 ![1680849834031](什么是数据结构.assets/1680849834031.png)
 
-4. 图形结构：数据元素之间除了同属于一个集合外，数据元素之间是多对多关系。
+4. 图形结构：数据元素之间是多对多关系。
 
 - 数据元素之间存在着多对多的关系，其前驱节点和后继节点的个数可以是任意多个
 
