--- a/算法学习/数据结构/2.时空复杂度/时间复杂度和空间复杂度.md
+++ b/算法学习/数据结构/2.时空复杂度/时间复杂度和空间复杂度.md
@@ -2,20 +2,31 @@
 
 [时间复杂度和空间复杂度（详解版） (biancheng.net)](http://c.biancheng.net/view/8081.html)
 
-什么是算法？
+### 什么是算法？
 
-算法是解决某个问题的思路。
+「算法 Algorithm」是在有限时间内解决特定问题的一组指令或操作步骤。算法具有以下特性：
 
-一个算法在能保证真正解决问题的前提下，我们要衡量算法的运行效率，也就是性能
+- 问题是明确的，具有清晰的输入和输出定义。
+- 解具有确定性，即给定相同的输入时，输出始终相同。
+- 具有可行性，在有限步骤、时间和内存空间下可完成。
 
-程序的运行效率具体可以从 2 个方面衡量，分别为：
+### 算法评价维度
 
-- 程序的运行时间。
-- 程序运行所需内存空间的大小。
+从总体上看，算法设计追求以下两个层面的目标：
+
+1. **找到问题解法**。算法需要在规定的输入范围内，可靠地求得问题的正确解。
+2. **寻求最优解法**。同一个问题可能存在多种解法，我们希望找到尽可能高效的算法。
+
+因此，在能够解决问题的前提下，算法效率成为主要的评价维度，主要包括：
+
+- **时间效率**，即算法运行速度的快慢。
+- **空间效率**，即算法占用内存空间的大小。
 
 根据算法编写出的程序，运行时间更短，运行期间占用的内存更少，该算法的运行效率就更高，算法也就更好。
 
 每一位初学者都要掌握一个技能，即善于运用时间复杂度和空间复杂度来衡量一个算法的运行效率。
+
+#### 时间复杂度
 
  判断一个算法所编程序运行时间的多少，并不是将程序编写出来，通过在计算机上运行所消耗的时间来度量。原因很简单，一方面，解决一个问题的算法可能有很多种，一一实现的工作量无疑是巨大的，得不偿失；另一方面，不同计算机的软、硬件环境不同，即便使用同一台计算机，不同时间段其系统环境也不相同，程序的运行时间很可能会受影响，严重时甚至会导致误判。
 
@@ -54,9 +65,9 @@ for(int i = 0 ; i < n ; i++)
 
 然后写成这样的形式 $O(n*m)$ 来表示这段代码的时间复杂度。(不要问为什么用这样的形式，记住就行了)
 
+![1681212069422](时间复杂度和空间复杂度.assets/1681212069422.png)
 
-
-空间复杂度
+#### 空间复杂度
 
 要知道每一个算法所编写的程序，运行过程中都需要占用大小不等的内存空间，例如：
 
@@ -90,9 +101,17 @@ int a[n];
 
 在第二个例子中，随着输入值 n 的增大，程序申请的临时空间成线性增长，则程序的空间复杂度用 O(n) 表示;
 
+![1681212167743](时间复杂度和空间复杂度.assets/1681212167743.png)
+
+### 权衡时间与空间
+
+理想情况下，我们希望算法的时间复杂度和空间复杂度都能达到最优。然而在实际情况中，同时优化时间复杂度和空间复杂度通常是非常困难的。
+
+**降低时间复杂度通常需要以提升空间复杂度为代价，反之亦然**。我们将牺牲内存空间来提升算法运行速度的思路称为「以空间换时间」；反之，则称之为「以时间换空间」。
+
+选择哪种思路取决于我们更看重哪个方面。在大多数情况下，时间比空间更宝贵，因此以空间换时间通常是更常用的策略。当然，在数据量很大的情况下，控制空间复杂度也是非常重要的。
 
 
-我觉得衡量一个算法，在一般的情况下，往往更看重的是时间复杂度，即希望算法运行的时间尽可能短，这样往往会需要更多的空间，即用空间来换时间。
 
 我们来看一个题目：
 
