--- a/算法学习/数据结构/4.栈和队列/1.栈和队列.md
+++ b/算法学习/数据结构/4.栈和队列/1.栈和队列.md
@@ -39,33 +39,7 @@
 
 初始化，入栈，出栈，取栈顶元素。自己思考，不难。
 
-# 递归思想和栈
-
-什么是递归？递归是算法吗？
-
-什么是算法？算法就是解决某类问题的思路。
-
-递归是算法吗，换句话说，递归算是解决某种问题的思路吗？
-
-我觉得递归是一种算法，递归思想是将大问题分解成同类小问题，或者将小问题合成同类大问题。
-
-这里的同类是，我们对大问题和小问题执行同样的操作，或者说，同样的代码。除了终止条件。
-
-算法是算法，实现是实现。
-
-递归不仅是一种算法，还是一种实现，递归函数是实现递归思想的一种方式。
-
-定义递归函数的时候需要注意什么呢？
-
-1. 必须有一个明确的递归结束条件
-2. 子问题的数据规模和大问题的数据规模之间的关系，换句话说，就是子问题和大问题之间的区别
-3. 子问题的结果和大问题的结果之间的关系
-
-2和3合起来就是  递推公式
-
-唉，你刚才说，“递归函数是实现递归思想的一种方式”，难道还有什么其他实现递归思想的方法吗？换句话说，递归函数难道还有等价的其他实现方式？
-
-当然有，听我一一道来。
+# 递归和栈
 
 我们先来了解一下函数调用的底层实现：
 
