--- a/算法学习/数据结构/6.树和二叉树/6.2.3根据带有空结点的序列构造二叉树.md
+++ b/算法学习/数据结构/6.树和二叉树/6.2.3根据带有空结点的序列构造二叉树.md
@@ -3,3 +3,34 @@
 [3384. 二叉树遍历 - AcWing题库](https://www.acwing.com/problem/content/description/3387/)
 
 ![1681195261605](6.2.3根据带有空结点的序列构造二叉树.assets/1681195261605.png)
+
+```cpp
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+int k;
+string str;
+
+
+void dfs()
+{
+    if(str[k] == '#')
+    {
+        k++;
+        return ;
+    }
+    char r = str[k++];
+    dfs();
+    cout << r << ' ';
+    dfs();
+}
+
+int main()
+{
+    cin >> str;
+    dfs();
+}
+```
+
