--- a/算法学习/数据结构/7.图/7.1图的存储结构.md
+++ b/算法学习/数据结构/7.图/7.1图的存储结构.md
@@ -51,5 +51,71 @@
 
 ### 邻接表
 
+邻接表有两部分组成：结点表和边表
+
+![1681201385209](7.1图的存储结构.assets/1681201385209.png)
+
+![1681201412939](7.1图的存储结构.assets/1681201412939.png)
+
+第一列是一个结点表，由一维数组实现，存放图的所有结点。以第一行举例，第一行的结点是$V_1$,结点后面跟了一个链表，链表的每一个元素表示从结点$V_1$出发的边。链表的第一个结点表示 从$V_1$出发到 *在一维数组中下标为$3$的顶点*  的边。 我们把跟在顶点$V_1$后面的链表是 从顶点$V_1$出发的边 的集合，称之为边表。
+
+边表的元素没有先后顺序之分。各边表结点的链接次序取决于建立邻接表的算法，以及边的输入次序。
+
+表头结点的结构如下：
+
+![1681200905827](7.1图的存储结构.assets/1681200905827.png)
+
+```cpp
+typedef struct VNode{
+    ElemType data;
+    ArcNode* firstArc;   //
+}VNode;
+
+
+VNode a[n];   //定义了一个大小为n的表头结点表a
+```
+
+边表是一个链表，链表的元素长这样；链表的每一个元素表示一条边；链表的元素无先后之分。
+
+![1681201054144](7.1图的存储结构.assets/1681201054144.png)
+
+```cpp
+typedef struct ArcNode{
+    int adjvex;     //这条边指向的顶点在数组中的下标
+    struct ArcNode* nextArc;    //指向 下一条边 的指针
+    ElemType info;            //和边有关的信息
+}ArcNode;
+```
+
+在无向图的邻接表中， 顶点$V_i$的度恰为第$i$个链表中的结点数;
+
+而在有向图中， 第$i$个链表中的结点个数只是顶点$V_i$的出度， 为求入度，必须遍历整个邻接表。在所有链表中， 满足  $adjvex = V_i$的下标  的结点数 是 顶点$V_i$的入度。
+
+为了便于确定顶点的入度，可以建立一个有向图的逆邻接表，即边表 是 进入顶点$V_i$的边  的集合。$adjvex$ 表示引出这条边的顶点在数组中的下标。
+
+
+
+邻接表表示法的优缺点：
+
+优点：
+
+1. 便于增加和删除顶点。
+2. 便于统计边的数目， 按顶点表顺序扫描所有边表可得到边的数目。若是无向图，边的数目要除以2
+3. 空间效率高。对于一个具有n个顶点e条边的图 G, 若 G 是无向图，则在其邻接表表示中有 n 个顶点表结点和 2e 个边表结点；若 G 是有向图，则在它的邻接表表示或逆邻接表表示中均有 n 个顶点表结点和e个边表结点。因此，邻接表或逆邻接表表示的空间复杂度为 O(n + e), 适合表示稀疏图。对于稠密图常采取邻接矩阵表示法。
+
+缺点：
+
+1. 不便于判断顶点之间是否有边，要判定 $V_i$和$V_j$之间是否有边，就需扫描第$i$个边表，最坏情况下要耗费 O(n)时间。
+
+2. 不便于计算有向图各个顶点的度。对于无向图，在邻接表表示中顶点$V_i$的度是第$i$个边表中的结点个数。 在有向图的邻接表中，第 $i$个边表上的结点个数是顶点$V_i$的出度，但求$V_i$的入度较困难，需遍历各顶点的边表。若有向图采用逆邻接表表示，则与邻接表表示相反，求顶点的入度容易，而求顶点的出度较难。
+
+
+
+### 十字链表
+
+### 邻接多重表
+
+
+
 
 
