--- a/李沐/对机器学习的理解/机器学习和深度学习的算法流程.md
+++ b/李沐/对机器学习的理解/机器学习和深度学习的算法流程.md
@@ -20,7 +20,7 @@
 
 [【机器学习基础】机器学习模型与算法最全分类汇总！_风度78的博客-CSDN博客](https://blog.csdn.net/fengdu78/article/details/115878843)
 
-**什么是线性模型，线性回归、逻辑回归、softmax回归、感知机都是线性模型，而神经网络有要求有激活函数，激活函数是**
+
 
 神经网络，灵感来自动物的中枢神经系统，大脑为什么能够思考？原因在于人体的神经网络，而神经网络的基本组成就是神经元：
 
@@ -46,7 +46,9 @@
 
 激活函数是神经网络非常重要的部分，为什么这么说呢？激活函数的作用是为神经元实现一道非线性运算，如果没有激活函数，那么无论多复杂的神经网络都只是线性模型，**多个线性函数的组合仍为线性函数**，没有激活函数的神经网络就不是神经网络了，只是线性模型。线性模型太差劲了。
 
-通用近似定理？？👇？？
+通用近似定理
+
+**通用近似定理**告诉我们，不管函数 f (x) 在形式上有多复杂，我们总能确保找到一个神经网络，对任何可能的输入 x ，以任意高的精度近似输出 f (x) （即使函数有多个输入和输出，即 f (x1,x2,x3...xn) ，通用近似定理的结论也是成立的。
 
 **神经网络的本质就是通过参数与激活函数来拟合特征与目标之间的真实函数关系。**拟合两个字的含义是指我们并不知道特征与目标的真实函数关系，我们用参数+激活函数的方式用训练数据训练我们的模型，使之能拟合出它们的真实函数关系。
 
@@ -56,17 +58,17 @@
 
 -------------------------------------------------------------------------------------------------------------------------------------------
 
-**虽然一个单隐层网络能学习任何函数， 但并不意味着我们应该尝试使用单隐藏层网络来解决所有问题。 事实上，通过使用更深（而不是更广）的网络，我们可以更容易地逼近许多函数。**
+**虽然一个单隐藏层网络能学习任何函数， 但并不意味着我们应该尝试使用单隐藏层网络来解决所有问题。 事实上，通过使用更深（而不是更广）的网络，我们可以更容易地逼近许多函数。**
 
 神经网络的分类：
 
 1. 线性神经网络
 
-   1. 李沐提到将线性回归和softmax回归看作神经网络，是因为可以用描述神经网络的方式来描述线性回归，我们描述神经网络的方式通常是用神经网络图。个人并不认为可以将线性回归并入神经网络，因为线性回归模型没有激活函数，softmax回归有非线性函数softmax，可以将softmax看成是单层神经网络。
+   1. 李沐提到将线性回归和softmax回归看作神经网络，是因为可以用描述神经网络的方式来描述线性回归，我们描述神经网络的方式通常是用神经网络图。~~个人并不认为可以将线性回归并入神经网络，因为线性回归模型没有激活函数，softmax回归有非线性函数softmax，可以将softmax看成是单层神经网络。~~
 
-      以上理解是有误的，判断一个模型是不是神经网络就看这个模型能不能用神经元来模拟出来，换句话说是能不能用神经网络图表述出来。
+      以上理解是有误的，**判断一个模型是不是神经网络就看这个模型能不能用神经元来模拟出来，换句话说是能不能用神经网络图表述出来。**
 
-      线性回归和softmax回归还有感知机都是线性神经网络。什么是线性神经网络呢？单层神经网络就是线性神经网络，也就是线性模型。对于隐藏层没有激活函数的多层神经网络，没有激活函数也就没有引入非线性，还是可以等价成一个单层的神经网络。
+      线性回归和softmax回归还有感知机都是线性神经网络。什么是**线性**神经网络呢？单层神经网络就是线性神经网络，也就是线性模型。对于隐藏层没有激活函数的多层神经网络，没有激活函数也就没有引入非线性，还是可以等价成一个单层的神经网络。
 
       我们思考一下，对于二层神经网络而言，中间的隐藏层加入了激活函数，将线性模型转化为非线性模型。
 
@@ -94,11 +96,13 @@
 
    5. 多层感知机是多层的全连接的前馈网络。从输入层到隐藏层到输出层，逐层计算结果，即所谓前馈？？？
 
-   我们说，只要能够用神经元模拟出来的模型，换句话说，能用神经网络图描述出来的，就把这个模型看作神经网络。深度学习就是神经网络的一种，上面那个链接中介绍了各种各样的神经网络，纵向按层延伸的神经网络就是深度学习的内容，这也就是为什么是 “深度学习”，因为是朝着神经网络的多层次研究的。
+   **我们说，只要能够用神经元模拟出来的模型，换句话说，能用神经网络图描述出来的，就把这个模型看作神经网络。深度学习就是神经网络的一种，上面那个链接中介绍了各种各样的神经网络，纵向按层延伸的神经网络就是深度学习的内容，这也就是为什么是 “深度学习”，因为是朝着神经网络的多层次研究的。**
 
    深度神经网络长啥吊样的都有，比如全连接和部分连接，只是前馈或者存在循环，等等都属于深度学习的内容，深度神经网络和深度学习有啥区别？是不是深度神经网络只是一种泛概念，具体的三要素咋实现交给深度学习研究，也就是说，深度学习也是一个泛概念，研究深度s
 
 深度学习是神经网络的进阶版，它的基本思路与神经网络类似，但往往比神经网络有着更复杂的结构以及优化算法，**是神经网络的纵向延伸**，常见的模型有CNN, RNN, LSTM等。
+
+
 
 **什么是模型的可解释性**
 
@@ -128,7 +132,7 @@
 
 深度学习是神经网络的进阶版，只是在模型结构及优化算法等方面有不同，因此，深度学习应包含于神经网络内。
 
-总结：机器学习中有很多
+
 
 
 
