--- a/算法学习/算法/acwing/dp/线性dp/最长上升子序列/最长上升子序列.md
+++ b/算法学习/算法/acwing/dp/线性dp/最长上升子序列/最长上升子序列.md
@@ -13,6 +13,14 @@
 
 
 
+首先思考，如何找一个序列的最长上升子序列呢？
+
+**第一，我们先找出，以序列中每一个元素为结尾的最长上升子序列**
+
+**第二，在这些序列中找到最长的。**
+
+为什么要这样做呢？因为从前往后太难找了啊。记住这种思路。
+
 ![1681979810602](最长上升子序列.assets/1681979810602.png)
 
 ![1681980669975](最长上升子序列.assets/1681980669975.png)
@@ -46,7 +54,7 @@ int main()
     for(int i = 1; i <= n; i++)
     {
         f[i] = 1;
-        for(int j = 0; j < i;j++)
+        for(int j = 1; j < i;j++)
         {
             if(a[j] < a[i]) f[i] = max(f[i],f[j]+1);
         }
