--- a/算法学习/算法/acwing/dp/背包问题/分组背包/分组背包.md
+++ b/算法学习/算法/acwing/dp/背包问题/分组背包/分组背包.md
@@ -32,7 +32,7 @@ int main()
         for(int j = 0;j <= m;j++)
         {
             for(int k = 0;k <= s[i];k++)
-            {
+            { //取 max(f[i-1][j-v[i][k]]+w[i][k])，从k为0开始和f[i][j]=0 比较，如果比f[i][j]大就覆盖，这样就能比较所有了，比v[i][k]小的背包容量j，说明第k个物品放不下，就排除这种情况
                 if(j>= v[i][k])
                 f[i][j] = max( f[i][j], f[i-1][j-v[i][k]]+w[i][k]);
             }
