--- a/算法学习/算法/acwing/二分和前缀和/二分.md
+++ b/算法学习/算法/acwing/二分和前缀和/二分.md
@@ -280,11 +280,17 @@ void binary_search_left_node(int nums[],int n,int target) //left
 
 
 
+上面的二分模板只是我们学习和理解二分法，真正运用二分法需要见识各种各样的题目。
+
+[剑指 Offer 11. 旋转数组的最小数字 - 力扣（Leetcode）](https://leetcode.cn/problems/xuan-zhuan-shu-zu-de-zui-xiao-shu-zi-lcof/description/?favorite=xb9nqhhg)
+
+这个题，target是数组numbers[r].
+
+即每个查找区间的右端点，仔细看看
 
 
 
-
-
+还有我想说，leetcode的上面的题目有些简单题可以自己写出来，但是题解上有更优解，即更低的时间复杂度或者空间复杂度，因此，我们做完题之后，一定要看看题解，看看有没有更好的思路。另外，自己也要想一想有没有更优的解法。这样更有竞争力。
 
 
 
