--- a/算法学习/算法/acwing/双指针/双指针.md
+++ b/算法学习/算法/acwing/双指针/双指针.md
@@ -1,5 +1,7 @@
 双指针
 
+双指针就是用了两个指针，比如说，链表删除某个结点的时候就是一前一后两个指针同时走
+
 [1238. 日志统计 - AcWing题库](https://www.acwing.com/problem/content/1240/)
 
 ![1682339237850](双指针.assets/1682339237850.png)
