--- a/算法学习/算法/排列组合.md
+++ b/算法学习/算法/排列组合.md
@@ -28,7 +28,7 @@ P_n^m=\frac{n!}{m!}=n(n-1)(n-2)\cdots(n-m+1)
 $$
 
 $$
-C_n^m=\frac{A!}{m!}=\frac{n!}{m!(n-m)!}
+C_n^m=\frac{P!}{m!}=\frac{n!}{m!(n-m)!}
 $$
 
 组合的一个小性质
