--- a/算法学习/算法/查找/哈希表/哈希表.md
+++ b/算法学习/算法/查找/哈希表/哈希表.md
@@ -2,6 +2,8 @@
 
 [哈希表（散列表）详解（包含哈希表处理冲突的方法） (biancheng.net)](http://c.biancheng.net/view/3437.html)
 
+[哈希表算法原理 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/63142005)
+
 哈希表可以通过关键字直接找到数据的存储位置，不需要进行任何的比较，其查找的效率相较于前面所介绍的查找算法是更高的。
 
 在初中的数学课本中学习过函数的相关知识，给定一个 x，通过一个数学公式，只需要将 x 的值带入公式就可以求出一个新的值 y。
