--- a/算法学习/算法/查找/矩阵搜索/矩阵搜索.md
+++ b/算法学习/算法/查找/矩阵搜索/矩阵搜索.md
@@ -74,3 +74,9 @@ private:
 };
 ```
 
+
+
+[剑指 Offer 13. 机器人的运动范围 - 力扣（Leetcode）](https://leetcode.cn/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/?favorite=xb9nqhhg)
+
+[剑指 Offer 13. 机器人的运动范围 - 题解（Leetcode）](https://leetcode.cn/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/solutions/110056/mian-shi-ti-13-ji-qi-ren-de-yun-dong-fan-wei-dfs-b/)
+
