--- a/算法学习/数据结构/6.树和二叉树/6.1二叉树的顺序存储结构.md
+++ b/算法学习/数据结构/6.树和二叉树/6.1二叉树的顺序存储结构.md
@@ -6,6 +6,8 @@
 
 对于一般的二叉树，如果仍按从上至下和从左到右的顺序将树中的结点顺序存储在一维数组中，则数组元素下标之间的关系不能够反映二叉树中结点之间的逻辑关系，只有增添一些并不存在的空结点，使之成为一棵完全二叉树的形式，然后再用一维数组顺序存储。
 
+按层存储
+
 ![1681105582686](顺序存储结构.assets/1681105582686.png)
 
 ![1681105606168](顺序存储结构.assets/1681105606168.png)
@@ -17,3 +19,34 @@
 
 
 顺序存储比较适合完全二叉树这类特殊的二叉树，对一般二叉树而言会造成极大的空间浪费。所以我们对二叉树的存储一般使用链式存储。
+
+
+
+上述的方法如何实现呢？
+
+对于完全二叉树来说，
+
+![1683728266747](6.1二叉树的顺序存储结构.assets/1683728266747.png)
+
+这种方法就是最上面那张图的结果。
+
+我们还有另外一种存储方法，比上面这种方式使用的空间更少。
+
+![1683728338282](6.1二叉树的顺序存储结构.assets/1683728338282.png)
+
+
+
+这两种方法得到的二叉树的顺序存储方式的 序列都可以反向得到我们的二叉树。
+
+方法二更优秀。
+
+上面我们可以手写实现从二叉树得到线性序列，也可以手写实现从线性序列得到二叉树，但是我们该怎么实现呢？
+
+方法一没遇到，方法二遇到了
+
+[剑指 Offer 37. 序列化二叉树 - 力扣（Leetcode）](https://leetcode.cn/problems/xu-lie-hua-er-cha-shu-lcof/?favorite=xb9nqhhg)
+
+[剑指 Offer 37. 序列化二叉树 - 题解（Leetcode）](https://leetcode.cn/problems/xu-lie-hua-er-cha-shu-lcof/solutions/187388/mian-shi-ti-37-xu-lie-hua-er-cha-shu-ceng-xu-bian-/)
+
+从二叉树到序列好办，队列实现层次遍历就可以实现。
+
