--- a/算法学习/算法/acwing/双指针/双指针.md
+++ b/算法学习/算法/acwing/双指针/双指针.md
@@ -57,5 +57,7 @@ int main()
 
 [算法总结：双指针算法（什么时候该使用、如何使用）_c++ 什么时候使用双指针参数_companion_zhang的博客-CSDN博客](https://blog.csdn.net/dauiwsbd/article/details/119490444)
 
+双指针算法指的是在重复遍历对象的过程中，不是在两个循环中使用单个指针进行重复访问，而是在一个循环中使用两个相同方向（快慢指针）或者相反方向（对撞指针）的指针进行访问。
+
 [算法一招鲜——双指针问题 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/71643340)
 
