--- a/算法学习/算法/acwing/递归和递推/枚举所有情况.md
+++ b/算法学习/算法/acwing/递归和递推/枚举所有情况.md
@@ -91,6 +91,8 @@ int main()
 
 全排列可以重复
 
+举个例子：给我3个不重复数字，输出所有全排列，这个全排列中数字可以重复。
+
 ```cpp
 #include <iostream>
 
@@ -131,3 +133,44 @@ int main()
 ```
 
 遇到这类题了再说
+
+
+
+另一类，数字可以重复，给出全排列，但是排列不能重复。
+
+举个例子：
+
+如果用全排列的方法的话，就会出现下面这样的情况。
+
+![1683770529618](枚举所有情况.assets/1683770529618.png)
+
+法一：使用库函数`next_permutation` 和 `prev_permutation`
+
+```cpp
+bool next_permutation(iterator start,iterator end);
+bool prev_permutation(iterator start,iterator end);
+```
+
+将当前序列[start,end)修改成下一个字典序排列。
+
+当当前序列不存在下一个或上一个排列时，函数返回false，否则返回true
+
+
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> permutation(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+
+        vector<vector<int>> res;
+        do res.push_back(nums); while (next_permutation(nums.begin(), nums.end()));
+
+        return res;
+    }
+};
+```
+
+
+
+这种方法就很巧妙，并没有直接求，而是拐了个弯，就到了目的地。非常牛逼
