--- a/算法学习/原码、反码、补码.md
+++ b/算法学习/原码、反码、补码.md
@@ -1,4 +1,4 @@
-计算机中整数的表示
+计算机中有符号整数的表示
 
 
 
@@ -58,7 +58,13 @@ $[+1]_原 =[+1]_反 =  00000001$
 
 
 
-建议补码的记忆方式按照第二种方法。。。
+建议补码的记忆方式按照第二种方法。。。也就是下面这个公式
+$$
+二进制：x_{w-1}x_{w-2}...x_0  
+\\
+真值 = (-1)^{x_{w-1}}*(x_{w-1}*2^{w-1}) + \sum_{i=0}^{w-2} x_i*2^i
+$$
+
 
 
 
@@ -73,3 +79,9 @@ $[+1]_原 =[+1]_反 =  00000001$
 原码和补码 计算 真值的方式类似，区别在于最高位符号位是否参与 值 的计算。
 
 反码，不知道有什么用，记住原码转反码，反码转补码的方式就可以了。
+
+
+
+涉及这方面的有
+
+数据溢出；数据类型的转换
