更新数据结构

--- a/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
+++ b/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
@@ -16,7 +16,7 @@
 
 数据的逻辑结构不考虑数据在计算机的位置，只描述数据元素之间的关系；
 
-2. 线性结构：数据元素之间是一对一的关系。
+1. 线性结构：数据元素之间是一对一的关系。
 
 - 一对一：
 
@@ -24,7 +24,7 @@
 
 ![1680849746349](什么是数据结构.assets/1680849746349.png)
 
-3. 树形结构：数据元素之间存在一种一对多的层次关系。
+2. 树形结构：数据元素之间存在一种一对多的层次关系。
 
 - 一对多：
 
@@ -32,7 +32,7 @@
 
 ![1680849834031](什么是数据结构.assets/1680849834031.png)
 
-4. 图形结构：数据元素之间是多对多关系。
+3. 图形结构：数据元素之间是多对多关系。
 
 - 数据元素之间存在着多对多的关系，其前驱节点和后继节点的个数可以是任意多个
 
@@ -47,6 +47,20 @@
 
 
 
+
+学习任何的数据结构都要关注的三个方面（三要素）：
+
+1. 逻辑结构
+2. 物理结构
+3. 对数据结构的基本操作
+
+定义数据结构的基本操作的意义是什么？
+
+1. 定义的数据结构可以方便使用。
+
+   没有对数据结构的操作，只学习数据的结构有什么用呢？数据结构就是拿来操作的啊。
+
+2. 将常用的运算/操作封装成函数可以避免重复操作。
 
 
 
