--- a/算法学习/数据结构/2.时空复杂度/时间复杂度和空间复杂度.md
+++ b/算法学习/数据结构/2.时空复杂度/时间复杂度和空间复杂度.md
@@ -67,6 +67,28 @@ for(int i = 0 ; i < n ; i++)
 
 ![1681212069422](时间复杂度和空间复杂度.assets/1681212069422.png)
 
+
+
+对于比较短的程序，我们可以去数程序执行的次数，但是如果程序代码有几千行呢？
+
+我们只关注 算法的 基本操作 就可以了。
+
+什么是算法的 基本操作？
+
+对于查找算法来说，比较关键字就是 查找算法的基本操作。
+
+
+
+为什么可以只关注基本操作呢？因为 一个算法的基本操作 是这个算法频繁使用的操作，主要影响算法的执行时间。从时间复杂度的角度看就是最高阶项。
+
+对于比较短的程序，我们依旧可以只看 这个程序的 基本操作，比如上面程序中，循环里的判断和循环内执行的语句就是程序中频繁执行的操作。所以求时间复杂度可以只关注这个循环的执行次数。
+
+我们可以直接忽略那些顺序执行的语句，因为这些语句的执行次数与n没有关系，不会随着n的增大而增大，即不是主要影响时间复杂度的因素，可以直接忽略。这就是我们上面时间复杂度只取最高次项忽略常数项的原因。
+
+
+
+
+
 #### 空间复杂度
 
 要知道每一个算法所编写的程序，运行过程中都需要占用大小不等的内存空间，例如：
@@ -102,6 +124,26 @@ int a[n];
 在第二个例子中，随着输入值 n 的增大，程序申请的临时空间成线性增长，则程序的空间复杂度用 O(n) 表示;
 
 ![1681212167743](时间复杂度和空间复杂度.assets/1681212167743.png)
+
+需要考虑空间复杂度的情况：
+
+1. 如果有递归程序的话，需要考虑空间复杂度
+
+2. 如果存在new语句，自己申请空间的话，也要考虑程序会不会在某个时刻申请过多空间导致出错。
+
+3. 定义二维数组的时候
+
+   ```cpp
+   int a[100000][100000];
+   ```
+
+   像这样的，定义大空间的一维数组还好，直接定义这么大的二维数组，肯定是爆内存的。呜呜呜
+
+如果程序中没有以上的情况的话，基本不用考虑空间复杂度，因为你不会写一个贼离谱的程序能直接把内存给爆掉的。
+
+
+
+
 
 ### 权衡时间与空间
 
