--- a/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
+++ b/算法学习/数据结构/1.什么是数据结构/什么是数据结构.md
@@ -38,6 +38,12 @@
 
 ![1680849989571](什么是数据结构.assets/1680849989571.png)
 
+4. 集合结构：数据元素之间没有关系，仅属于同一集合
+
+   ![1684336079897](什么是数据结构.assets/1684336079897.png)
+
+   
+
 数据的存储结构，指数据的逻辑结构在计算机中具体的存储形式。一种逻辑结构可以有多种存储形式。
 
 顺序存储结构：把逻辑上相邻的数据元素存储在物理位置上相邻的存储单位里，用物理位置上的相邻来体现逻辑上的相邻。
