--- a/算法学习/数据结构/3.线性表/1.线性表.md
+++ b/算法学习/数据结构/3.线性表/1.线性表.md
@@ -62,6 +62,8 @@ elem表示结点存放的数据，`elemType elem` 是一个泛写，表示结点
 
 ### 静态链表
 
+#### 两个数组实现
+
 我们还可以维护两个数组，val和ne
 
 ```cpp
@@ -160,6 +162,16 @@ int main()
 这个题用指针加链表的方式不好写。我已经试过了。
 
 
+
+#### 结构体数组实现
+
+```cpp
+struct Node    //单个元素结点的定义
+{
+    int val;
+    int next;
+};
+```
 
 
 
