--- a/算法学习/数据结构/4.栈和队列/1.栈和队列.md
+++ b/算法学习/数据结构/4.栈和队列/1.栈和队列.md
@@ -2,8 +2,7 @@
 
 # 栈
 
-栈是限定仅在表尾进行插入或删除操作的线性表。， 对栈来说， 表尾端有其
-特殊含义， 称为栈顶 (top), 相应地， 表头端称为栈底 (bottom)。 不含元素的空表称为空栈。
+栈是限定仅在表尾进行插入或删除操作的线性表。，对栈来说， 表尾端有其特殊含义， 称为栈顶 (top), 相应地， 表头端称为栈底 (bottom)。 不含元素的空表称为空栈。
 
 ![1680858738816](1.栈和队列.assets/1680858738816.png)
 
@@ -39,18 +38,23 @@
 
 初始化，入栈，出栈，取栈顶元素。自己思考，不难。
 
+
+
 # 递归和栈
 
 我们先来了解一下函数调用的底层实现：
 
-1. 从汇编角度看，需要去看csapp，自己知道就行，没必要增加文档的负担。
-2. 忽略汇编层的实现细节，简要说说递归函数是怎么用栈实现的。[『教程』堆栈是个啥？_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1P44y1q7uL/?spm_id_from=333.788&vd_source=5a374f315281b0338a0b7fd69b8b8e98)
+函数调用（递归的原理）：当CPU按存储顺序调用机器码时，若遇到函数调用指令，在跳转到函数那里之前会先把后面还未执行的指令地址开头存储到栈中，以便在函数执行完回到之前的位置。若出现多次调用情况，则也会多次压栈。显然，我们应该先回到最后一次调用函数之前的位置，再一步步回到最开始的位置，而越先出栈的地址反而是越后面的函数调用时压栈的地址，正好是应该先返回的地址，正好符合先进后出的要求，程序也会一步步地顺利返回最初一次函数调用时下一个指令的地址了。
+
+[『教程』堆栈是个啥？_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1P44y1q7uL/?spm_id_from=333.788&vd_source=5a374f315281b0338a0b7fd69b8b8e98)
 
 
 
-然后我们就可以用循环+栈替代递归函数。这只是我的一个想法，并没具体实现，先挖个坑。
+然后我们就可以用循环+栈替代递归函数。
 
-以后在阅读一下，《数据结构》3.4.2 递归过程与递归工作栈   这部分到底讲了什么，我到现在还没明白要说什么。
+
+
+
 
 # 队列
 
