--- a/算法学习/数据结构/5.字符串匹配算法和特殊矩阵的表示/1.字符串.md
+++ b/算法学习/数据结构/5.字符串匹配算法和特殊矩阵的表示/1.字符串.md
@@ -1,8 +1,8 @@
 1.字符串
 
-字符串的逻辑结构就是线性结构，跟线性表的区别在于，字符串的数据元素必须是字符。其次在操作上，对线性表的操作一般都是单个元素，而对字符串操作，更多的是对子串。
+字符串的逻辑结构就是线性结构，跟线性表的区别在于，字符串的数据元素必须是字符。其次在操作上，对线性表的操作一般都是单个元素，而**对字符串操作，更多的是对子串。**
 
-一个字符串的子串是指 字符串一段连续的串。
+**一个字符串的子串是指 字符串一段连续的串。**空串也是子串
 
 ~~串的存储结构也分为顺序存储和链式存储。不是，我长这么大，都没见串写成链式的，链式存储的字符串有啥用？看看了书上，说顺序存储的字符串比链式存储的有效率，我擦，那又何必提字符串的链式结构呢？~~
 
@@ -22,6 +22,10 @@ char c[MAXSIZE];   //静态的
 char *c;
 ```
 
+字符串的基本操作
+
+![1684288852875](1.字符串.assets/1684288852875.png)
+
 
 
 串的模式匹配算法
@@ -37,7 +41,22 @@ char *c;
 ![](1.字符串.assets/1.gif)
 
 ```cpp
-//代码不想写...
+int BF(string S,string T)
+{
+    int i = 1,j = 1;
+    while(i <= S.length&& j <= P.length)
+    {
+        if(S[i] == P[j]) i++,j++;    //开始比较，如果相等，都往后移动指针，接着比较
+        else                        //如果不相等
+        {
+            i = i-j+2;             //i指针移动到下一个子串开头
+            j = 1;             //j指针移动到模式串开头
+        }
+    }
+    if(j > P.length)    //说明成功匹配
+    return i-P.length;   //返回匹配成功的子串在主串中的位置
+    else return -1;     //否则没有匹配成功
+}
 ```
 
 BMP算法
