--- a/算法学习/数据结构/5.字符串匹配算法和特殊矩阵的表示/2.特殊矩阵的表示.md
+++ b/算法学习/数据结构/5.字符串匹配算法和特殊矩阵的表示/2.特殊矩阵的表示.md
@@ -94,7 +94,7 @@ $$
 
 
 
-
+[3.4_特殊矩阵的压缩存储_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1b7411N798?p=32&vd_source=5a374f315281b0338a0b7fd69b8b8e98)
 
 
 
