--- a/algorithm-learning/language/java/3.javaweb/2.后端/后端.md
+++ b/algorithm-learning/language/java/3.javaweb/2.后端/后端.md
@@ -1,10 +1,14 @@
+
+
+
+
 后端
 
 maven
 
 管理和构建java项目的工具。
 
-
+![1716195071174](后端.assets/1716195071174.png)
 
 了解完maven之后，接下来是spring boot项目的创建，创建完成之后，编写一个请求处理类，然后在该类中定义接收某一请求的处理方法。@RestController ，处理方法的返回值（数据）会返回给浏览器。
 
@@ -215,3 +219,129 @@ JSON参数的接收：
 ![1712930387245](后端.assets/1712930387245.png)
 
 学到P74了
+
+### 文件上传
+
+#### 前后端接口准备
+
+前端准备：
+
+定义一个form表单，左上是前端源码，左下是网页展示，[upload.html](upload.html)是网页文件。我们可以选择文件准备将文件上传。
+
+我们将[upload.html](upload.html)存放在`src\resources\static`目录下，这个目录是专门用来存放静态网页的。
+
+后端准备：定义一个接口来接收这个post请求的参数，注意右下定义的接口只是接收到了参数，并没有对文件进行保存。
+
+<table><tr>
+<td><img src=后端.assets/1716125711251.png border=0></td>
+<td><img src=后端.assets/1716126243778.png border=0></td>
+<td><img src=后端.assets/1716127213502.png border=0></td>
+</tr></table>
+
+#### 本地存储&前后端联调
+
+浏览器输入 `localhost:8080/upload.html`访问存放在后端服务器的这个静态网页。输入信息并提交
+
+![1716129268879](后端.assets/1716129268879.png)
+
+```java
+@RestController
+public class UploadController {
+    @PostMapping("/upload")
+    public Result upload(String username, Integer age, MultipartFile image) throws Exception {
+        // 获得文件的名字，这个例子中就是 中国梦.txt
+        String originalFilename = image.getOriginalFilename();
+        // 将 image这个文件存放在 E:\中国梦.txt 这个地方
+        image.transferTo(new File("E\\"+originalFilename));
+        return Result.success();
+    }
+}
+```
+
+这样我们就实现了将文件存放在了服务器本地了。
+
+如果后端开发人员没有[upload.html](upload.html)静态页面的话，也可以使用postman：请求体是form-data格式。
+
+<img src=后端.assets/1716133165828.png width = 60% padding = 20%>
+
+#### 文件名优化
+
+上传的文件可能会重名，就会导致同名文件进行覆盖，因此要给上传的文件赋予一个独一无二的名字，我们用uuid作为文件名，拓展名依旧。
+
+```java
+@RestController
+public class UploadController {
+    @PostMapping("/upload")
+    public Result upload(String username, Integer age, MultipartFile image) throws Exception {
+        // 获得文件的名字，这个例子中就是 中国梦.txt
+        String originalFilename = image.getOriginalFilename();
+        
+        // 获得originalFilename的最后一个 . 的下标
+        int index = originalFilename.lastIndexOf(".");
+        // 截取从index到字符串末尾部分的子串
+        String suffix = originalFilename.substring(index);
+        // UUID.randomUUID()生成一个随机不重复的uuid
+        String newFileName = UUID.randomUUID() + suffix;
+        
+        // 将 image这个文件存放在 E:\中国梦.txt 这个地方
+        image.transferTo(new File("E\\"+originalFilename));
+        return Result.success();
+    }
+}
+```
+
+这样就不会覆盖了。
+
+#### 配置项
+
+![1716134410652](后端.assets/1716134410652.png)
+
+单个请求中是可以上传多个文件的，可以用数组的方式来接收。
+
+#### 云存储
+
+开通阿里云(对象存储服务)OSS→创建bucket→获取密钥accesskey→参照官方SDK示例编写入门程序。
+
+> **对象存储**是一种数据存储，其中每个数据单元（称为“对象”）作为离散单元存储。这些对象实际上可以是任何类型的数据：pdf，视频，音频，文本，网站数据或任何其他文件类型。
+>
+> 与文件存储相反，这些对象存储在单个平面结构中，没有文件夹层次结构。在对象存储中，与文件存储使用的嵌套分层结构不同，所有对象都存储在平面地址空间中。此外，所有默认和自定义元数据都与对象本身（不作为单独的文件系统表或索引的一部分）一起存储在具有唯一标识符的平面地址空间中，并且这种方式变得更容易索引和访问。
+>
+> 对象存储在基于云的存储方案中非常常见，可用于以极高的可伸缩性和可靠性管理，处理和分发内容。平面寻址方案意味着访问单个对象既快速又简单：对象名称可以作为查找表中的“键”。对象存储系统只需要知道您要查找的对象的键（名称），然后可以使用查找表快速轻松地将其返回给您。
+
+[Java_对象存储(OSS)-阿里云帮助中心 (aliyun.com)](https://help.aliyun.com/zh/oss/developer-reference/java/?spm=a2c4g.11186623.0.0.45ea1d24n72C53)
+
+### 登录校验
+
+<img  src=后端.assets/1716111863181.png width = 80% padding = 20%>
+
+在没有登录校验的情况下，浏览器可以访问任何一个接口，实现的登录功能徒有其表。例如，浏览器在不登录的情况下直接访问depts是可以访问成功的。这是不应该允许的。
+
+#### JWT令牌
+
+##### 介绍
+
+![1716092257505](后端.assets/1716092257505.png)
+
+JWT令牌是一个加密的字符串：
+
+绿色的部分是JWT令牌的header(头)，存储的信息是一个json格式`{"alg":"HS256","type":"JWT"}`，通过Base64编码，将其编码成了绿色部分的字符串。
+
+紫色的部分是JWT令牌的payload(有效载荷)，存储的是有效的信息，也是通过Base64编码成了紫色部分的字符串。
+
+红色的部分是JWT令牌的signature(签名)，该签名是由header和payload和指定的一个secret通过header里声明的alg算法"HS256"得到。一旦该JWT令牌的某一部分被篡改，在校验签名的时候都会失败，签名保证了JWT令牌的安全性
+
+这个secret是必须有的，因为header和payload都是可以通过Base64反编码获得的，如果仅用header和payload通过alg算法就能得到secret的话，那么任何人都可以得到签名了。
+
+##### 使用场景
+
+<img  src=后端.assets/1716109931256.png width = 80% padding = 20%>
+
+浏览器访问登录接口进行登录，登录成功之后生成一个JWT令牌并返回给浏览器(后端功能)，浏览器在以后的每次请求中都需要携带该JWT令牌(前端功能)。服务器拦截请求之后对该JWT令牌进行校验，校验成功之后放行(后端功能)。
+
+##### 生成和解析
+
+在后端我们需要完成的两个功能：
+
+1. 登录成功之后生成JWT令牌
+2. 对前端传递过来的JWT令牌解析并校验，校验成功放行，校验失败返回错误信息。
+
